# Warframe-Relic-Checker

./: README.md  build-run-all.sh  start-server.sh
back-end/: Cargo.toml
back-end/src/: main.rs
front-end/: package-lock.json  package.json
front-end/src/: App.css  App.js  Data.json
front-end/src/Components/: RelicDisplay.css  RelicDisplay.js  searchBar.css  searchBar.js
